# fastapi-devtools

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  docker-nginx-compose.yml  main.py  pyproject.toml
alembic/: HELP.md  env.py
alembic/versions/: 0c23cbb99019_initial_migration.py  1c50561d19fe_update_20240826_3.py  752643e9ce99_initial_migration.py  8c640e271647_update_field_description.py  97c7de693a7a_update_20240826_2.py  a3331a080250_update_table_name.py  ae1adae5833a_update_20240826_1.py  c89e6da2038e_update_20240826.py
app/: app.py
app/api/v1/: routes.py
app/api/v1/endpoints/depend/: depend.py
app/api/v1/endpoints/system/: system.py
app/api/v1/endpoints/user/: user.py
app/config/: __init__.py  app_config.py
app/core/: config.py  custom_logger.py  events.py  security.py  utils.py
app/crud/: base_crud.py  user.py
app/crud/user/: user.py
app/db/: postgresql_db.py  redis_db.py
app/depends/: __init__.py  token_verify_depend.py
app/errors/: __init__.py  validation_error.py
app/middleware/: __init__.py  jwt_middleware.py  jwt_token.py  log_middleware.py  usetime_middleware.py
app/models/: base_model.py
app/models/response/: response.py
app/models/user/: __init__.py  user.py  user_enum.py  user_profile.py
app/schemas/: user.py
docker/nginx/: docker-nginx-compose.yml  nginx.conf
docker/nginx/conf.d/: default.conf
docker/nginx/html/: index.html
