[tool.poetry]
name = "fastapi-devtools"
version = "0.1.0"
description = ""
authors = ["周陶强 <zhoutaoq1029@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
